objects/Approval_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Approving_AD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving AD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_CFO_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving CFO/Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesfYQj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ_SF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ SF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RSF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving RSF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_Reg_Sales_Ops__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving Reg Sales Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesgqC8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_SF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving SF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name_Text__c</fullName>
        <label>Employee Name Text</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HQ Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAM_Altos_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM Altos Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqIKi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAM_Azuro_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM Azuro Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqILH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAM_Sigirity_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM Sigrity Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchiesqsjf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SaaS_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SaaS Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqILb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Key_WW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added this field for Tempkey purpose. This field will have Rick Mahoney and will be used in Apttus Tempkey flow.</description>
        <label>Temp Key WW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesLydA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_Asia_Pacific_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP Asia Pacific Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqIJu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_EMEA_Israel_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP EMEA Israel Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchiesqsiv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_EMEA_Non_Israel_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP EMEA Non Israel Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqI5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_India_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP India Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchiesqsj5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_Japan_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP Japan Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_HierarchiesqI6C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_IP_North_America_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP IP North America Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Hierarchies9</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Hierarchy</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_SF__c</columns>
        <columns>Approving_RSF__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <columns>Approving_HQ_SF__c</columns>
        <columns>Approving_CFO_Controller__c</columns>
        <columns>Temp_Key_WW__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Admin</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_Reg_Sales_Ops__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>SAM_Altos_Admin__c</columns>
        <columns>SAM_Azuro_Admin__c</columns>
        <columns>SAM_Sigirity_Admin__c</columns>
        <columns>VIP_IP_North_America_Admin__c</columns>
        <columns>VIP_IP_Japan_Admin__c</columns>
        <columns>VIP_IP_Asia_Pacific_Admin__c</columns>
        <columns>HQ_Admin__c</columns>
        <columns>SaaS_Admin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ceci_VAR_Users_Pending</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RSF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>Ray Oporto,Satish Kodandaramaiah,yt yu,hc park,sj kim,han lee,jack cui,joon-han</value>
        </filters>
        <label>Ceci VAR Users - Pending</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HQ_Admin</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Status__c</columns>
        <columns>HQ_Admin__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_SF__c</columns>
        <columns>Approving_RSF__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <label>HQ Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ray_Ross</fullName>
        <columns>Employee_Name__c</columns>
        <columns>NAME</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Name__c</field>
            <operation>contains</operation>
            <value>joyce</value>
        </filters>
        <label>Thomas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Regional_Sales_Ops</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Approving_Reg_Sales_Ops__c</columns>
        <columns>Approving_SF__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_RSF__c</columns>
        <columns>Approving_HQ__c</columns>
        <columns>Approving_HQ_SF__c</columns>
        <filterScope>Everything</filterScope>
        <label>Regional Sales Ops</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Charlie_S</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Jack Bartell</value>
        </filters>
        <label>Users reporting to Jack Bartell</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Charlie_S1</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Charlie Schadewitz</value>
        </filters>
        <label>AD = Charlie S</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Don_Mausali</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Don Mausali</value>
        </filters>
        <label>Users reporting to Don Mausali</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Kevin_Hiroshima</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <columns>Approving_SF__c</columns>
        <columns>Approving_RSF__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Kevin Hiroshima</value>
        </filters>
        <label>Users reporting to Kevin Hiroshima</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Paul</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Brian sung</value>
        </filters>
        <filters>
            <field>Approving_VP__c</field>
            <operation>equals</operation>
            <value>Brian sung</value>
        </filters>
        <label>Users reporting to Brian sung</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Paul_Scannell</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Krishna Kumar</value>
        </filters>
        <label>Users reporting to Krishna Kumar</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Paul_Scannell1</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>paul scannell</value>
        </filters>
        <label>Users reporting to Paul Scannell</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Ray_Ross</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approving_AD__c</field>
            <operation>equals</operation>
            <value>Ray Ross</value>
        </filters>
        <label>Users reporting to Ray Ross</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_reporting_to_Vamsi_R</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Approving_AD__c</columns>
        <columns>Approving_VP__c</columns>
        <columns>Approving_RVP__c</columns>
        <columns>Approving_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>Christopher Cronk</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>Ronen Laviv</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>Dilip Lalwani</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>Christel Mauffet-Smith</value>
        </filters>
        <filters>
            <field>Employee_Name__c</field>
            <operation>equals</operation>
            <value>Mike Srouji</value>
        </filters>
        <label>Users reporting to Vamsi R</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AH-{0}</displayFormat>
        <label>Approval Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>